Generate 1.27 version
